fixed nav alignmnet

--- a/src/components/Nav/nav.module.scss
+++ b/src/components/Nav/nav.module.scss
@@ -1,4 +1,4 @@
-nav {
+.nav {
   position: absolute;
   height: 10rem;
   width: 100%;
